Documentation edits made through Mintlify web editor

--- a/whitepaper/nft-tiers-and-rarity.mdx.mdx
+++ b/whitepaper/nft-tiers-and-rarity.mdx.mdx
@@ -10,7 +10,7 @@ The HealthPass.run NFT collection is structured into four distinct tiers, each d
 The four tiers, in descending order of rarity and value, are:
 
 <CardGroup cols={2}>
-  <Card title="1. Chief Physician NFT" icon="user-md-crown">
+  <Card title="1. Chief Physician NFT" icon="user-doctor">
     The pinnacle tier, offering the most exclusive benefits.
     *   **Supply:** Extremely Limited
     *   **Hospital Discount:** Highest percentage discount available at partner facilities.
